Resolves: tdf#97839 a single character may be more than 1 utf-16 code points

Change-Id: Iba2460bfb9335615796db3f5e233b870a8d63339
(cherry picked from commit 847cdd8efd0662d61d288a4d944edc30e864d145)
(cherry picked from commit f0e35cb2fb6f0f595d44c7a7c01ddaf60b19d642)